--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.0",
+    "morgan": "^1.10.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
